--- a/Client/views/test.ejs
+++ b/Client/views/test.ejs
@@ -11,9 +11,9 @@
 </head>
 <body>
     <!--navBar-->
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-        <i class="fa-solid fa-cookie-bite fa-xl"></i>
+        <i id="icon" class="fa-solid fa-cookie-bite fa-xl"></i>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -29,7 +29,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Store</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">About Us</a>
+                <a class="nav-link active" aria-current="page" href="#">About</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
