--- a/Client/views/test.ejs
+++ b/Client/views/test.ejs
@@ -23,13 +23,13 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Trending</a>
+                <a class="nav-link" aria-current="page" href="#">Trending</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Store</a>
+                <a class="nav-link" aria-current="page" href="#">Store</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">About</a>
+                <a class="nav-link" aria-current="page" href="#">About</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
