--- a/Client/views/test.ejs
+++ b/Client/views/test.ejs
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/654065a27d.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,8 +36,8 @@
               </li>
             </ul>
             <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <input class="form-control me-2 search" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-dark" type="submit">Search</button>
             </form>
           </div>
         </div>
@@ -42,9 +45,11 @@
 
       <!--main section: holds the cookie banner-->
       <section class="main">
-      <div class="container">
-        <div class="row">
-            <div class="col-lg-7">
+      <div class="container py-5">
+        <div class="row py-4">
+            <div class="col-lg-7 pt-5">
+              <h1 class="pt-5 header">Welcome to Green Goodies</h1>
+              <h4>"Elevate your snacking game with our vegan cookies"</h2>
             </div>
         </div>
       </div>
