Making changes to styling

--- a/Client/views/styles/landingPage.css
+++ b/Client/views/styles/landingPage.css
@@ -34,5 +34,11 @@
     font-family: 'Hanken Grotesk', sans-serif; 
 }
 
+#message-icon{
+    padding-top:15px;
+}
 
+.new img{
+    padding: 10px;
+}
 
