--- a/Client/views/test.ejs
+++ b/Client/views/test.ejs
@@ -55,6 +55,28 @@
       </div>
     </section>
 
+    <!--section talking about product quality-->
+
+    <section class="new">
+      <div class="container py-5">
+        <div class="row pt-5">
+          <div class="col-lg-7 m-auto">
+            <div class="row text-center">
+              <div class="col-lg-3">
+                <img src="/assets/veganIcon.jpeg" class="img-fluid" alt="">
+              </div>
+              <div class="col-lg-3">
+                <img src="/assets/Asset1.png" class="img-fluid" alt="">
+              </div>
+              <div class="col-lg-3">
+                <img id="message-icon" src="/assets/Asset6.png" class="img-fluid" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
 </body>
 </html>
