--- a/Client/views/test.ejs
+++ b/Client/views/test.ejs
@@ -69,7 +69,7 @@
                 <img src="/assets/Asset1.png" class="img-fluid" alt="">
               </div>
               <div class="col-lg-3">
-                <img id="message-icon" src="/assets/Asset6.png" class="img-fluid" alt="">
+                <img src="/assets/gluttenFree.png" class="img-fluid" alt="">
               </div>
             </div>
           </div>
