--- a/Client/views/HomePage.ejs
+++ b/Client/views/HomePage.ejs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/654065a27d.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,9 +31,9 @@
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#">Store</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">About</a>
-              </li>
+              <form method="get" action="/about">
+                <button type="submit">about</button>
+              </form>
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2 search" type="search" placeholder="Search" aria-label="Search">
