--- a/Client/views/HomePage.ejs
+++ b/Client/views/HomePage.ejs
@@ -31,9 +31,9 @@
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#">Store</a>
               </li>
-              <form method="get" action="/about">
-                <button type="submit">about</button>
-              </form>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/about">About</a>
+              </li>
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2 search" type="search" placeholder="Search" aria-label="Search">
