Made the nav bar fixed

--- a/Client/views/HomePage.ejs
+++ b/Client/views/HomePage.ejs
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!--navBar-->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top bg-light p-3">
         <div class="container-fluid">
         <i id="icon" class="fa-solid fa-cookie-bite fa-xl"></i>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
