--- a/Client/views/about.ejs
+++ b/Client/views/about.ejs
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles/about.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/654065a27d.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
 </head>
 <body>
      <!--navBar-->
-     <nav class="navbar navbar-expand-lg">
+     <nav class="navbar navbar-expand-lg navbar-light sticky-top bg-light p-3">
         <div class="container-fluid">
         <i id="icon" class="fa-solid fa-cookie-bite fa-xl"></i>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +41,18 @@
         </div>
       </nav>
 
-    <h1>About</h1>
+      <!--about section grid section-->
+    <div class="container text-center">
+        <div class="row">
+          <div class="col pt-5">
+            <h1>About</h1>
+            <p>Welcome to our vegan cookie business! We are a locally owned and operated bakery that specializes in creating delicious, plant-based cookies. Our cookies are made using only the highest quality ingredients and are 100% vegan, meaning they contain no animal products. We believe that indulging in a sweet treat should not come at the expense of animal welfare or environmental sustainability. That's why we use only eco-friendly packaging and source our ingredients from local, sustainable farms whenever possible. Our wide selection of flavors includes classic chocolate chip, snickerdoodle, and oatmeal raisin, as well as unique flavors like matcha green tea and peanut butter chocolate chip. Whether you're a vegan or just looking to try something new, we have a cookie for you. Thank you for considering our business and we hope to see you soon!</p>
+          </div>
+          <div class="col pt-5">
+            <img src="/assets/aboutImg.jpeg" class="img-fluid" alt="">
+          </div>
+        </div>
+      </div>
     
 </body>
 </html>
