--- a/Client/views/HomePage.ejs
+++ b/Client/views/HomePage.ejs
@@ -58,17 +58,17 @@
     <!--section talking about product quality-->
 
     <section class="new">
-      <div class="container py-5">
-        <div class="row pt-5">
+      <div class="container py-4 iconContainer">
+        <div class="row pt-4 text-center">
           <div class="col-lg-7 m-auto">
             <div class="row text-center">
-              <div class="col-lg-3">
+              <div class="col-lg-3 w-25">
                 <img src="/assets/veganIcon.jpeg" class="img-fluid" alt="">
               </div>
-              <div class="col-lg-3">
+              <div class="col-lg-3 w-25">
                 <img src="/assets/Asset1.png" class="img-fluid" alt="">
               </div>
-              <div class="col-lg-3">
+              <div class="col-lg-3 w-25">
                 <img src="/assets/gluttenFree.png" class="img-fluid" alt="">
               </div>
             </div>
