Add about page with brief description
Everything works for the most part, except for the footer. Problem is that it blocks part of the business img when site is resized.

--- a/Client/views/about.ejs
+++ b/Client/views/about.ejs
@@ -42,17 +42,42 @@
       </nav>
 
       <!--about section grid section-->
-    <div class="container text-center">
+
+      <div class="container pt-3">
         <div class="row">
-          <div class="col pt-5">
+          <div class="col-lg-6 pt-5">
             <h1>About</h1>
-            <p>Welcome to our vegan cookie business! We are a locally owned and operated bakery that specializes in creating delicious, plant-based cookies. Our cookies are made using only the highest quality ingredients and are 100% vegan, meaning they contain no animal products. We believe that indulging in a sweet treat should not come at the expense of animal welfare or environmental sustainability. That's why we use only eco-friendly packaging and source our ingredients from local, sustainable farms whenever possible. Our wide selection of flavors includes classic chocolate chip, snickerdoodle, and oatmeal raisin, as well as unique flavors like matcha green tea and peanut butter chocolate chip. Whether you're a vegan or just looking to try something new, we have a cookie for you. Thank you for considering our business and we hope to see you soon!</p>
+            <p class="pt-2"><a id="customLetter">W</a>elcome to our vegan cookie business! We are a locally owned and operated bakery that specializes in creating delicious, plant-based cookies. Our cookies are made using only the highest quality ingredients and are 100% vegan, meaning they contain no animal products. We believe that indulging in a sweet treat should not come at the expense of animal welfare or environmental sustainability. That's why we use only eco-friendly packaging and source our ingredients from local, sustainable farms whenever possible. Our wide selection of flavors includes classic chocolate chip, snickerdoodle, and oatmeal raisin, as well as unique flavors like matcha green tea and peanut butter chocolate chip. Whether you're a vegan or just looking to try something new, we have a cookie for you. Thank you for considering our business and we hope to see you soon!</p>
           </div>
-          <div class="col pt-5">
-            <img src="/assets/aboutImg.jpeg" class="img-fluid" alt="">
+          <div class="col-sm-5 pt-2">
+           <img src="/assets/cookiestore.jpeg" id="aboutImg" class="img-fluid" alt="">
           </div>
         </div>
       </div>
+
+      <!--social media section-->
+      <footer class="new fixed-bottom ">
+        <div class="container py-4 iconContainer">
+          <div class="row pt-4 text-center">
+            <div class="col-lg-7 m-auto">
+              <div class="row text-center">
+                <div class="col-lg-3">
+                    <i class="fa-brands fa-facebook-f fa-lg icon img-fluid"></i>
+                </div>
+                <div class="col-lg-3">
+                    <i class="fa-brands fa-instagram fa-lg icon img-fluid"></i>
+                </div>
+                <div class="col-lg-3">
+                    <i class="fa-brands fa-twitter fa-lg icon img-fluid"></i>
+                </div>
+                <div class="col-lg-3">
+                    <i class="fa-brands fa-linkedin fa-lg icon img-fluid"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </footer>
     
 </body>
 </html>
