Add small styling change to footer

--- a/Client/views/about.ejs
+++ b/Client/views/about.ejs
@@ -61,16 +61,16 @@
           <div class="row pt-4 text-center">
             <div class="col-lg-7 m-auto">
               <div class="row text-center">
-                <div class="col-lg-3">
+                <div class="col-lg-3 w-25">
                     <i class="fa-brands fa-facebook-f fa-lg icon img-fluid"></i>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 w-25">
                     <i class="fa-brands fa-instagram fa-lg icon img-fluid"></i>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 w-25">
                     <i class="fa-brands fa-twitter fa-lg icon img-fluid"></i>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 w-25">
                     <i class="fa-brands fa-linkedin fa-lg icon img-fluid"></i>
                 </div>
               </div>
