--- a/Client/views/success.ejs
+++ b/Client/views/success.ejs
@@ -7,13 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <form method="post" action="/login">
-        <input type="text" placeholder="Enter Password" name="Password" required>
-        <button type="submit">Login</button>
-    </form>
-
-    <h1><%= error %></h1>
-
-
+    <header>success</header>
 </body>
 </html>
